<resources>
    <string name="app_name">FragmentsInterface</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_seekbar_preference">Preferència de búsqueda</string>
    <string name="title_switch_preference">Preferencia opció</string>
    <string name="summary_switch_preference">Descripció de la preferència</string>
    <string name="title_dropdown_preference">Lista desplegable</string>
    <string name="widgets">Widgets</string>
    <string name="title_checkbox_preference">Checkbox</string>
    <string name="summary_checkbox_preference">Preferencia tipo checkbox</string>

</resources>